--- a/src/styles.styl
+++ b/src/styles.styl
@@ -32,6 +32,10 @@ html {
       background: $header-bg;
     }
 
+    [disabled] {
+      cursor: not-allowed !important;
+    }
+
     .fui-check, .fui-plus {
       color: $green;
     }
