small bug fixes

--- a/src/app/views/quiz/quiz-start/quiz-start.component.html
+++ b/src/app/views/quiz/quiz-start/quiz-start.component.html
@@ -24,7 +24,7 @@
             <div class="quiz-form">
               <p class="card-text">Quiz options:</p>
               <div class="row quiz-show-progress">
-                <div class="col-1"><input type="checkbox" id="showProgress" name="showProgress" ngModel></div>
+                <div class="col-1"><input type="checkbox" id="showProgress" name="showProgress" disabled="disabled" ngModel></div>
                 <div class="col-11 text-left"><p>Track progress</p></div>
               </div>
               <div class="row quiz-random">
