--- a/src/app/shared/components/auth/signin/signin.component.html
+++ b/src/app/shared/components/auth/signin/signin.component.html
@@ -1,21 +1,21 @@
 <div class="col-md-6 mx-auto">
   <div class="slanted">
     <div class="slanted-top">
-      <h3>Login</h3>
+      <h3>{{ 'auth.signin.title' | translate}}</h3>
     </div>
   </div>
   <div class="card">
     <div class="card-body">
       <form (ngSubmit)="onSignin(f)" #f="ngForm">
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email">{{ 'auth.signin.email' | translate}}</label>
           <input type="text" id="email" name="email" class="form-control" ngModel>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">{{ 'auth.signin.password' | translate}}</label>
           <input type="password" id="password" name="password" class="form-control" ngModel>
         </div>
-        <button class="btn btn-primary" type="submit">Login</button>
+        <button class="btn btn-primary" type="submit">{{ 'auth.signin.toolbar.login' | translate}}</button>
       </form>
     </div>
   </div>
