--- a/src/app/views/quiz/question-list/question-list.component.html
+++ b/src/app/views/quiz/question-list/question-list.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="slanted">
           <div class="slanted-top">
-            <h3>Question List</h3>
+            <h3>{{ 'quiz.questionList.title' | translate}}</h3>
           </div>
         </div>
         <ng-container *ngIf="questions">
@@ -23,14 +23,14 @@
         <ng-container *ngIf="!questions">
           <ul class="list-group">
             <li class="list-group-item text-center">
-              <h5>Loading...</h5>
+              <h5>{{ 'quiz.questionList.loading' | translate }}</h5>
             </li>
           </ul>
         </ng-container>
         <ng-container *ngIf="questions && questions.length < 1">
           <ul class="list-group">
             <li class="list-group-item text-center">
-              <h5>No questions</h5>
+              <h5>{{ 'quiz.questionList.noQuestions' | translate }}</h5>
             </li>
           </ul>
         </ng-container>
