--- a/src/app/views/quiz/question/question.component.html
+++ b/src/app/views/quiz/question/question.component.html
@@ -2,17 +2,17 @@
   <div class="quiz-card col-md-6 mx-auto">
     <div class="slanted">
       <div class="slanted-top">
-        <h3>Question #{{ question ? question.order : '?' }}</h3>
+        <h3>{{ 'quiz.question.title' | translate:{id:question ? question.order : '?'} }}</h3>
       </div>
     </div>
     <div class="card">
       <div class="card-header text-center">
         <h5>{{ question.question }}</h5>
-        <small *ngIf="question.hint" class="question-hint text-muted">(hint: {{ question.hint }})</small>
+        <small *ngIf="question.hint" class="question-hint text-muted">{{ 'quiz.question.hint' | translate:{hint:question.hint} }}</small>
       </div>
       <div class="card-body">
         <div class="row">
-          <small class="question-correct-answers text-muted text-center">({{ numOfCorrectAnswers() }} correct answer{{ numOfCorrectAnswers() > 1 ? 's' : '' }})</small>
+          <small class="question-correct-answers text-muted text-center"> {{ 'quiz.question.correct' | translate:{number: numOfCorrectAnswers(), postfix: numOfCorrectAnswers() > 1 ? 's' : ''} }}</small>
         </div>
         <div class="question-answer"
              formArrayName="answers"
@@ -46,8 +46,8 @@
         </div>
       </div>
       <div class="card-footer">
-        <button [disabled]="question.checked" type="submit" class="btn btn-success">Check</button>
-        <button [disabled]="!question.checked" (click)="onNext()" class="btn btn-primary float-right">Next</button>
+        <button [disabled]="question.checked" type="submit" class="btn btn-success">{{ 'quiz.question.toolbar.check' | translate }}</button>
+        <button [disabled]="!question.checked" (click)="onNext()" class="btn btn-primary float-right">{{ 'quiz.question.toolbar.next' | translate }}</button>
       </div>
     </div>
   </div>
