--- a/src/app/views/quiz/question-list/question-list.component.styl
+++ b/src/app/views/quiz/question-list/question-list.component.styl
@@ -1,7 +1,7 @@
 @import '../../../../variables.styl';
 
 .questions-list {
-  overflow-y: auto;
+  overflow: visible;
 
   .list-group {
     background: #fff;
