--- a/src/app/views/quiz/question-list/question-list.component.styl
+++ b/src/app/views/quiz/question-list/question-list.component.styl
@@ -20,6 +20,14 @@
         display: inline-block;
       }
 
+      img {
+        max-width: 100%;
+        max-height: 50px;
+        height: auto;
+        display: inline-block;
+        margin: 2px 5px;
+      }
+
       &:hover {
         .drag-handle, .remove-handle {
           display: inline-block;
