--- a/src/app/views/quiz/question/question.component.styl
+++ b/src/app/views/quiz/question/question.component.styl
@@ -1,8 +1,20 @@
 @import '../../../../variables.styl';
 
 .card-header {
-  h5 {
+  .question {
     margin-top: 20px;
+    margin-bottom: .5rem;
+    font-size: 1.25rem;
+    font-weight: 500;
+    line-height: 1.2;
+
+    img {
+      display: inline-block;
+      max-width: 100%;
+      max-height: $question-img-max-height;
+      height: auto;
+      margin: 5px 10px;
+    }
   }
 }
 
