minor bugs fixed

--- a/src/app/views/quiz/question-list/question-list.component.styl
+++ b/src/app/views/quiz/question-list/question-list.component.styl
@@ -20,6 +20,10 @@
         display: inline-block;
       }
 
+      br {
+        display: none;
+      }
+
       img {
         max-width: 100%;
         max-height: 50px;
