'show number of correct answers' option added to quiz start page

--- a/src/app/views/quiz/question/question.component.html
+++ b/src/app/views/quiz/question/question.component.html
@@ -7,7 +7,7 @@
         <small *ngIf="question.hint" class="question-hint text-muted">{{ 'quiz.question.hint' | translate:{hint:question.hint} }}</small>
       </div>
       <div class="card-body" *ngIf="question.answers">
-        <div class="row">
+        <div *ngIf="quizService.showNumCorrectAnswers" class="row">
           <small class="question-correct-answers text-muted text-center"> {{ getNumOfCorrectPlural(numOfCorrectAnswers()) | translate:{number: numOfCorrectAnswers()} }}</small>
         </div>
         <div class="question-answer"
