--- a/src/app/views/quiz/quiz-start/quiz-start.component.html
+++ b/src/app/views/quiz/quiz-start/quiz-start.component.html
@@ -27,6 +27,10 @@
                 <div class="col-1"><input type="checkbox" id="randomQuestions" name="randomQuestions" ngModel></div>
                 <div class="col-11 text-left"><p>{{ 'quiz.start.options.randomQuestions' | translate }}</p></div>
               </div>
+              <div class="row quiz-show-num-correct-answers">
+                <div class="col-1"><input type="checkbox" id="showNumCorrectAnswers" name="showNumCorrectAnswers" ngModel></div>
+                <div class="col-11 text-left"><p>{{ 'quiz.start.options.numCorrectAnswers' | translate }}</p></div>
+              </div>
             </div>
           </div>
         </div>
